# Cosmos

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AlgorithmicReverb.cpp  AlgorithmicReverb.h  AllpassFilter.cpp  AllpassFilter.h  CombFilter.cpp  CombFilter.h  DiffusionNetwork.cpp  DiffusionNetwork.h  FairingSeparation.cpp  FairingSeparation.h  ModulationEngine.cpp  ModulationEngine.h
Source/UI/: CosmosLookAndFeel.cpp  CosmosLookAndFeel.h  DecayCurveDisplay.cpp  DecayCurveDisplay.h  EngineKnob.cpp  EngineKnob.h  NebulaSelectorPanel.h  NebulaSelectorPopup.h  StarfieldVisualizer.cpp  StarfieldVisualizer.h
Source/Utils/: Parameters.cpp  Parameters.h
